src/styles/_core.sass
@import "../../node_modules/bulma/sass/utilities/_all"

$sidebar-menu-width: 350px
$like-color: #e0245e
$repost-color: #17bf63
$comment-color: #1da1f2

$scheme-main: #14151f	//Main background
$scheme-main-bis: #1f202e	//Article background
$scheme-main-ter: #282a3e	//Options background

$border-light: $scheme-main


$background: $scheme-main
$dark: #1e2039
$dark-error: #391e33
$primary: $blue
$light: $grey-light

$text: $white-bis
$text-light: $white
$text-strong: $white-ter

$input-color: $grey-darker
$input-background-color: $white
$input-border-color: $grey-darker

$box-background-color: $dark

$card-background-color: $scheme-main-bis
$card-content-background-color: $card-background-color
$card-header-background-color: $card-background-color
$card-footer-background-color: $card-background-color

$button-color: $grey-darker
$button-background-color: $white

$progress-text-color: $dark
$progress-value-background-color: $grey-dark

$loading-background: $scheme-main-bis

$dropdown-item-hover-color: $white
$dropdown-item-hover-background-color: $primary

$colors: ("white": ($white, $black), "black": ($black, $white),	"light": ($light, $light-invert), "dark": ($dark, $dark-invert), "primary": ($primary, $primary-invert), "info": ($info, $info-invert),	"success": ($success, $success-invert),	"warning": ($warning, $warning-invert),	"danger": ($danger, $danger-invert))

@mixin borderless-button($pad: 0)
	padding: $pad
	border: none
	background: none
	outline: none
	cursor: pointer

	&:hover:not(:disabled) svg
		color: $link

	&:disabled svg
		color: $grey

	&:active
		margin-top: 1px

@mixin pretty-scrollbar
	::-webkit-scrollbar
		width: 12px
		height: 12px

	::-webkit-scrollbar-thumb
		border-radius: 0
		background-color: $scheme-main-ter

